2007-11-13  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-error-reporting.c:
	Remove last use of GNOME_VFS_ERROR
	
        * libnautilus-private/Makefile.am:
        * libnautilus-private/nautilus-vfs-utils.[ch]: Removed.
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-window-manage-views.c:
	Remove GNOME_VFS_ERROR

2007-11-13  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-window-manage-views.c:
        * src/nautilus-window-private.h:
	Better error reporting on view failure

2007-11-13  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-window-manage-views.c:
        * src/nautilus-window-private.h:
	Try to mount location if not mounted.

2007-11-13  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Handle std:target_uri gio links

2007-11-12  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Fix reversed checks

2007-11-08  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.in:
	* src/nautilus-image-properties-page.c:
	Add support for exempi >= 1.99.5 while keeping support for older
	versions.

2007-11-06  Sebastian Dröge  <slomo@circular-chaos.org>

	* NEWS:
	* docs/key_mouse_navigation.txt:
	* libnautilus-private/nautilus-emblem-utils.c:
	* libnautilus-private/nautilus-emblem-utils.h:
	* src/file-manager/fm-properties-window.c:
	* src/nautilus-emblem-sidebar.c:
	* src/nautilus-property-browser.c:
	Fix typo: availible -> available.

2007-11-06  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-program-choosing.c:
	Update to the new GAppInfo and EelAppLaunchContext APIs
	Remove old startup notify code

2007-11-05  Jürg Billeter  <j@bitron.ch>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-directory-view.c: