@@ -154,6 +154,8 @@ libnautilus_private_la_SOURCES = \
 	nautilus-monitor.h \
 	nautilus-open-with-dialog.c \
 	nautilus-open-with-dialog.h \
+	nautilus-progress-info.c \
+	nautilus-progress-info.h \
 	nautilus-program-choosing.c \
 	nautilus-program-choosing.h \
 	nautilus-recent.c \
