@@ -1,3 +1,14 @@
+2007-11-16  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/Makefile.am:
+        * libnautilus-private/nautilus-progress-info.[ch]:
+	Added NautilusProgressInfo class
+	
+        * libnautilus-private/nautilus-file-operations.c:
+        * src/file-manager/fm-tree-view.c:
+        * src/nautilus-places-sidebar.c:
+	Update to new gio API
+
 2007-11-13  Alexander Larsson  <alexl@redhat.com>
 
         * src/file-manager/fm-error-reporting.c:
